--- a/07/Dockerfile
+++ b/07/Dockerfile
@@ -1,7 +1,8 @@
 FROM ubuntu:14.04
 ADD requirements.txt /tmp/
+RUN apt-get update
 RUN DEBIAN_FRONTEND=noninteractive apt-get install -y -q python-all python-pip
 RUN pip install -qr /tmp/requirements.txt
-ADD app.py /opt/webapp
+ADD app.py /opt/webapp/
 EXPOSE 5000
-CMD ["app.py"]
+CMD ["python", "/opt/webapp/app.py"]
