--- a/07/dock_comp/docker-compose.yml
+++ b/07/dock_comp/docker-compose.yml
@@ -8,7 +8,7 @@ services:
       - "8080:80"
     volumes:
       - ./nginx.conf:/etc/nginx/conf.d/default.conf
-    volume_from:
+    volumes_from:
       - php
 
   php:
