--- a/07/homework/docker-compose.yml
+++ b/07/homework/docker-compose.yml
@@ -4,13 +4,16 @@ services:
   maven:
     build: maven
     volumes:
-      - type: bind
-        source: ./build/hello-1.0.war
-        target: /home/boxfuse-sample-java-war-hello/target/hello-1.0.war
+      - type: volume
+        source: build
+        target: /home/boxfuse-sample-java-war-hello/target
 
   tomcat:
     image: tomcat:8.0-slim
     volumes:
-      - type: bind
-        source: ./build/hello-1.0.war
-        target: /usr/local/tomcat/webapps/hello-1.0.war
+      - type: volume
+        source: build
+        target: /usr/local/tomcat/webapps
+
+volumes:
+  build:
