--- a/07/homework/docker-compose.yml
+++ b/07/homework/docker-compose.yml
@@ -4,18 +4,14 @@ services:
   maven:
     build: maven
     volumes:
-      - type: volume
-        source: build
-        target: /home/boxfuse-sample-java-war-hello/target
+      - "build:/home/boxfuse-sample-java-war-hello/target"
 
   tomcat:
     image: tomcat:8.0-slim
     ports:
-      - "81:8080"
+      - "8081:8080"
     volumes:
-      - type: volume
-        source: build
-        target: /usr/local/tomcat/webapps
+      - "build:/usr/local/tomcat/webapps"
 
 volumes:
   build:
